--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,9 +26,9 @@
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
 
-    <!-- welcome-file-list-->
-        <!-- welcome-file>index.html</welcome-file -->
-    <!-- /welcome-file-list-->
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
     
    <session-config>
       <session-timeout>10</session-timeout>
